[tool.poetry]
name = "repl_nix_SalesStuff-SofiaCuello1"
version = "0.1.0"
description = ""
authors = ["SofiaCuello1 <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
plotly = "^5.13.1"
streamlit = "^1.20.0"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[theme]
primaryColor="#F63366"
backgroundColor="#DFD5CF"
secondaryBackgroundColor="#F2E9E4"
textColor="#332A28"
font="sans serif"